Ajout de contenu

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/base.css') }}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+              integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ asset('css/connexion.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/inscription.css') }}">
+    {% endblock %}
+</head>
+
+
+<body>
+
+
+<div class="container">
+    <div class="row">
+        <img src="{{ asset("image/banniere.png") }}" alt="Smiley face" height="350" width="1200">
+    </div>
+    <div class="row">
+        <div class="col-lg-2 menu">
+            <ul>
+                <li>
+                    <tr>
+                        <td><a href="http://127.0.0.1:8000/index">Accueil</a></td>
+                    </tr>
+                </li>
+                <li>
+                    <tr>
+                        <td><td><a href="http://127.0.0.1:8000/personnage">Personnage</a></td>
+                    </tr>
+                </li>
+                <li>
+                    <tr>
+                        <td>C</td>
+                    </tr>
+                </li>
+                <li>
+                    <tr>
+                        <td>D</td>
+                    </tr>
+                </li>
+
+            </ul>
+        </div>
+        <div class="col-lg-10 menu">
+            {% block body %}
+
+            {% endblock %}
+        </div>
+    </div>
+</div>
+
+
+{% block javascripts %}
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
+
+{% endblock %}
+</body>
+
+<footer>
+    <p>Wiki databasetest</p>
+</footer>
 </html>
