--- a/templates/index/page/allevent.html.twig
+++ b/templates/index/page/allevent.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="example-wrapper">
-    Event :
+    <div class="example-wrapper">
+        News
         <div class="container">
             {% for news in news %}
                 <div class="row">
@@ -13,5 +13,5 @@
                 </div>
             {% endfor %}
         </div>
-</div>
+    </div>
 {% endblock %}
